@@ -10,6 +10,11 @@
 				"Picture": "![[![{1}]!]]([![Url:!:{0}]!] '[![{2}]!]')",
 				"Link": "[{1}]([![Url:!:{0}]!] '[![{2}]!]')"
 			},
+			{
+			"text/x-nazmd": {
+				"Picture": "![[![{1}]!]]([![Url:!:{0}]!] '[![{2}]!]')",
+				"Link": "[{1}]([![Url:!:{0}]!] '[![{2}]!]')"
+			},
 			"text/x-web-textile": {
 				"Picture": "![![Source:!:http://]!]([![Alternative text]!])!",
 				"Link": "'([![Title]!])':[![Link:!:http://]!]"
@@ -23,6 +28,20 @@
 		</field>
 		<value>{
 			"text/x-web-markdown": {
+				"Picture": {
+					"replaceWith": null,
+					"className": "Picture",
+					"beforeInsert": "markitup.finder.open"
+				},
+				"Link": {
+					"className": "Link",
+					"openWith": null,
+					"closeWith": null,
+					"placeHolder": null,
+					"beforeInsert": "markitup.finder.open"
+				}
+			},
+			"text/x-nazmd": {
 				"Picture": {
 					"replaceWith": null,
 					"className": "Picture",
