@@ -1,0 +1,11 @@
+Markup language: 
+NazMD
+
+Description:
+Nazareth College Flavoured Markdown
+
+Install:
+- Download the zip file
+- Unzip it in your markItUp! sets folder
+- Modify your JS link to point at this set.js
+- Modify your CSS link to point at this style.css
